Prepare for 24.4.0 (alpha11)

--- a/package.json
+++ b/package.json
@@ -3,304 +3,143 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
-    "@hilla/form": "2.5.6",
-    "@hilla/frontend": "2.5.6",
-    "@hilla/generator-typescript-cli": "2.5.6",
-    "@hilla/generator-typescript-core": "2.5.6",
-    "@hilla/generator-typescript-plugin-backbone": "2.5.6",
-    "@hilla/generator-typescript-plugin-barrel": "2.5.6",
-    "@hilla/generator-typescript-plugin-client": "2.5.6",
-    "@hilla/generator-typescript-plugin-model": "2.5.6",
-    "@hilla/generator-typescript-plugin-push": "2.5.6",
-    "@hilla/generator-typescript-plugin-subtypes": "2.5.6",
-    "@hilla/generator-typescript-utils": "2.5.6",
-    "@hilla/react-auth": "2.5.6",
-    "@hilla/react-components": "2.3.0",
-    "@hilla/react-crud": "2.5.6",
-    "@hilla/react-form": "2.5.6",
     "@polymer/polymer": "3.5.1",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
     "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/accordion": "24.3.7",
-    "@vaadin/app-layout": "24.3.7",
-    "@vaadin/avatar": "24.3.7",
-    "@vaadin/avatar-group": "24.3.7",
-    "@vaadin/board": "24.3.7",
-    "@vaadin/bundles": "24.3.7",
-    "@vaadin/button": "24.3.7",
-    "@vaadin/charts": "24.3.7",
-    "@vaadin/checkbox": "24.3.7",
-    "@vaadin/checkbox-group": "24.3.7",
-    "@vaadin/combo-box": "24.3.7",
+    "@vaadin/bundles": "24.4.0-alpha16",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/confirm-dialog": "24.3.7",
-    "@vaadin/context-menu": "24.3.7",
-    "@vaadin/cookie-consent": "24.3.7",
-    "@vaadin/crud": "24.3.7",
-    "@vaadin/custom-field": "24.3.7",
-    "@vaadin/date-picker": "24.3.7",
-    "@vaadin/date-time-picker": "24.3.7",
-    "@vaadin/details": "24.3.7",
-    "@vaadin/dialog": "24.3.7",
-    "@vaadin/email-field": "24.3.7",
-    "@vaadin/field-highlighter": "24.3.7",
-    "@vaadin/form-layout": "24.3.7",
-    "@vaadin/grid": "24.3.7",
-    "@vaadin/grid-pro": "24.3.7",
-    "@vaadin/horizontal-layout": "24.3.7",
-    "@vaadin/icon": "24.3.7",
-    "@vaadin/icons": "24.3.7",
-    "@vaadin/integer-field": "24.3.7",
-    "@vaadin/item": "24.3.7",
-    "@vaadin/list-box": "24.3.7",
-    "@vaadin/login": "24.3.7",
-    "@vaadin/map": "24.3.7",
-    "@vaadin/menu-bar": "24.3.7",
-    "@vaadin/message-input": "24.3.7",
-    "@vaadin/message-list": "24.3.7",
-    "@vaadin/multi-select-combo-box": "24.3.7",
-    "@vaadin/notification": "24.3.7",
-    "@vaadin/number-field": "24.3.7",
-    "@vaadin/password-field": "24.3.7",
-    "@vaadin/polymer-legacy-adapter": "24.3.7",
-    "@vaadin/progress-bar": "24.3.7",
-    "@vaadin/radio-group": "24.3.7",
-    "@vaadin/rich-text-editor": "24.3.7",
-    "@vaadin/scroller": "24.3.7",
-    "@vaadin/select": "24.3.7",
-    "@vaadin/side-nav": "24.3.7",
-    "@vaadin/split-layout": "24.3.7",
-    "@vaadin/tabs": "24.3.7",
-    "@vaadin/tabsheet": "24.3.7",
-    "@vaadin/text-area": "24.3.7",
-    "@vaadin/text-field": "24.3.7",
-    "@vaadin/time-picker": "24.3.7",
-    "@vaadin/tooltip": "24.3.7",
-    "@vaadin/upload": "24.3.7",
-    "@vaadin/vertical-layout": "24.3.7",
-    "@vaadin/virtual-list": "24.3.7",
+    "@vaadin/hilla-file-router": "24.4.0-alpha11",
+    "@vaadin/hilla-frontend": "24.4.0-alpha11",
+    "@vaadin/hilla-lit-form": "24.4.0-alpha11",
+    "@vaadin/hilla-react-auth": "24.4.0-alpha11",
+    "@vaadin/hilla-react-crud": "24.4.0-alpha11",
+    "@vaadin/hilla-react-form": "24.4.0-alpha11",
+    "@vaadin/hilla-react-signals": "24.4.0-alpha11",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha16",
+    "@vaadin/react-components": "24.4.0-alpha16",
+    "@vaadin/router": "1.7.5",
+    "@vaadin/vaadin-development-mode-detector": "2.0.6",
+    "@vaadin/vaadin-usage-statistics": "2.1.2",
     "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.1.0",
-    "proj4": "2.9.2",
+    "lit": "3.1.2",
+    "proj4": "2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.18.0"
+    "react-router-dom": "6.22.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7",
     "@lit-labs/react": "^1.1.0",
-    "@rollup/plugin-replace": "5.0.4",
-    "@rollup/pluginutils": "5.0.5",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "4.2.0",
-    "@vitejs/plugin-react-swc": "3.5.0",
-    "async": "3.2.4",
-    "glob": "10.3.3",
+    "@rollup/plugin-replace": "5.0.5",
+    "@rollup/pluginutils": "5.1.0",
+    "@types/react": "18.2.60",
+    "@types/react-dom": "18.2.19",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha11",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha11",
+    "@vitejs/plugin-react": "4.2.1",
+    "async": "3.2.5",
+    "glob": "10.3.10",
     "rollup-plugin-brotli": "3.1.0",
-    "rollup-plugin-visualizer": "5.9.2",
+    "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.3.3",
-    "vite": "5.0.6",
-    "vite-plugin-checker": "0.6.2",
+    "typescript": "5.4.2",
+    "vite": "5.1.4",
+    "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
     "workbox-precaching": "7.0.0"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
-    "@vaadin/icon": "$@vaadin/icon",
-    "@vaadin/icons": "$@vaadin/icons",
     "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
-    "@vaadin/tooltip": "$@vaadin/tooltip",
     "@vaadin/common-frontend": "$@vaadin/common-frontend",
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "lit": "$lit",
     "@polymer/polymer": "$@polymer/polymer",
-    "@hilla/react-components": "$@hilla/react-components",
     "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
     "classnames": "$classnames",
     "react": "$react",
     "react-dom": "$react-dom",
     "react-router-dom": "$react-router-dom",
-    "@hilla/generator-typescript-plugin-model": "$@hilla/generator-typescript-plugin-model",
-    "@hilla/generator-typescript-plugin-barrel": "$@hilla/generator-typescript-plugin-barrel",
-    "@hilla/generator-typescript-plugin-push": "$@hilla/generator-typescript-plugin-push",
-    "@hilla/generator-typescript-core": "$@hilla/generator-typescript-core",
-    "@hilla/generator-typescript-plugin-client": "$@hilla/generator-typescript-plugin-client",
-    "@hilla/generator-typescript-utils": "$@hilla/generator-typescript-utils",
-    "@hilla/frontend": "$@hilla/frontend",
-    "@hilla/form": "$@hilla/form",
-    "@hilla/generator-typescript-plugin-backbone": "$@hilla/generator-typescript-plugin-backbone",
-    "@hilla/generator-typescript-cli": "$@hilla/generator-typescript-cli",
-    "@vaadin/board": "$@vaadin/board",
-    "@vaadin/charts": "$@vaadin/charts",
-    "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
-    "@vaadin/crud": "$@vaadin/crud",
-    "@vaadin/grid-pro": "$@vaadin/grid-pro",
-    "@vaadin/map": "$@vaadin/map",
-    "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
     "@types/react-dom": "$@types/react-dom",
     "@types/react": "$@types/react",
-    "@vaadin/form-layout": "$@vaadin/form-layout",
-    "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
-    "@vaadin/list-box": "$@vaadin/list-box",
-    "@vaadin/upload": "$@vaadin/upload",
-    "@vaadin/app-layout": "$@vaadin/app-layout",
-    "@vaadin/integer-field": "$@vaadin/integer-field",
-    "@vaadin/select": "$@vaadin/select",
-    "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
-    "@hilla/generator-typescript-plugin-subtypes": "$@hilla/generator-typescript-plugin-subtypes",
-    "@vaadin/grid": "$@vaadin/grid",
-    "@vaadin/tabsheet": "$@vaadin/tabsheet",
-    "@vaadin/text-area": "$@vaadin/text-area",
-    "@vaadin/context-menu": "$@vaadin/context-menu",
-    "@vaadin/password-field": "$@vaadin/password-field",
-    "@hilla/react-auth": "$@hilla/react-auth",
-    "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
-    "@vaadin/progress-bar": "$@vaadin/progress-bar",
-    "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
     "proj4": "$proj4",
-    "@vaadin/time-picker": "$@vaadin/time-picker",
-    "@vaadin/number-field": "$@vaadin/number-field",
-    "@vaadin/avatar-group": "$@vaadin/avatar-group",
-    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
-    "@vaadin/login": "$@vaadin/login",
-    "@vaadin/side-nav": "$@vaadin/side-nav",
-    "@vaadin/details": "$@vaadin/details",
-    "@vaadin/button": "$@vaadin/button",
-    "@vaadin/accordion": "$@vaadin/accordion",
-    "@vaadin/avatar": "$@vaadin/avatar",
-    "@hilla/react-crud": "$@hilla/react-crud",
-    "@vaadin/radio-group": "$@vaadin/radio-group",
-    "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
     "date-fns": "$date-fns",
-    "@vaadin/virtual-list": "$@vaadin/virtual-list",
-    "@hilla/react-form": "$@hilla/react-form",
-    "@vaadin/combo-box": "$@vaadin/combo-box",
-    "@vaadin/menu-bar": "$@vaadin/menu-bar",
-    "@vaadin/message-list": "$@vaadin/message-list",
-    "@vaadin/custom-field": "$@vaadin/custom-field",
-    "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
-    "@vaadin/date-picker": "$@vaadin/date-picker",
-    "@vaadin/dialog": "$@vaadin/dialog",
-    "@vaadin/item": "$@vaadin/item",
-    "@vaadin/tabs": "$@vaadin/tabs",
-    "@vaadin/split-layout": "$@vaadin/split-layout",
-    "@vaadin/text-field": "$@vaadin/text-field",
-    "@vaadin/checkbox": "$@vaadin/checkbox",
-    "@vaadin/notification": "$@vaadin/notification",
-    "@vaadin/scroller": "$@vaadin/scroller",
-    "@vaadin/message-input": "$@vaadin/message-input",
-    "@vaadin/email-field": "$@vaadin/email-field"
+    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
+    "@vaadin/router": "$@vaadin/router",
+    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/react-components": "$@vaadin/react-components",
+    "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend",
+    "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
+    "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
+    "@vaadin/hilla-file-router": "$@vaadin/hilla-file-router",
+    "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
+    "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
+    "@vaadin/hilla-react-signals": "$@vaadin/hilla-react-signals"
   },
   "vaadin": {
     "dependencies": {
-      "@hilla/form": "2.5.6",
-      "@hilla/frontend": "2.5.6",
-      "@hilla/generator-typescript-cli": "2.5.6",
-      "@hilla/generator-typescript-core": "2.5.6",
-      "@hilla/generator-typescript-plugin-backbone": "2.5.6",
-      "@hilla/generator-typescript-plugin-barrel": "2.5.6",
-      "@hilla/generator-typescript-plugin-client": "2.5.6",
-      "@hilla/generator-typescript-plugin-model": "2.5.6",
-      "@hilla/generator-typescript-plugin-push": "2.5.6",
-      "@hilla/generator-typescript-plugin-subtypes": "2.5.6",
-      "@hilla/generator-typescript-utils": "2.5.6",
-      "@hilla/react-auth": "2.5.6",
-      "@hilla/react-components": "2.3.0",
-      "@hilla/react-crud": "2.5.6",
-      "@hilla/react-form": "2.5.6",
       "@polymer/polymer": "3.5.1",
-      "@types/react": "18.2.37",
-      "@types/react-dom": "18.2.15",
-      "@vaadin/accordion": "24.3.7",
-      "@vaadin/app-layout": "24.3.7",
-      "@vaadin/avatar": "24.3.7",
-      "@vaadin/avatar-group": "24.3.7",
-      "@vaadin/board": "24.3.7",
-      "@vaadin/bundles": "24.3.7",
-      "@vaadin/button": "24.3.7",
-      "@vaadin/charts": "24.3.7",
-      "@vaadin/checkbox": "24.3.7",
-      "@vaadin/checkbox-group": "24.3.7",
-      "@vaadin/combo-box": "24.3.7",
+      "@vaadin/bundles": "24.4.0-alpha16",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/confirm-dialog": "24.3.7",
-      "@vaadin/context-menu": "24.3.7",
-      "@vaadin/cookie-consent": "24.3.7",
-      "@vaadin/crud": "24.3.7",
-      "@vaadin/custom-field": "24.3.7",
-      "@vaadin/date-picker": "24.3.7",
-      "@vaadin/date-time-picker": "24.3.7",
-      "@vaadin/details": "24.3.7",
-      "@vaadin/dialog": "24.3.7",
-      "@vaadin/email-field": "24.3.7",
-      "@vaadin/field-highlighter": "24.3.7",
-      "@vaadin/form-layout": "24.3.7",
-      "@vaadin/grid": "24.3.7",
-      "@vaadin/grid-pro": "24.3.7",
-      "@vaadin/horizontal-layout": "24.3.7",
-      "@vaadin/icon": "24.3.7",
-      "@vaadin/icons": "24.3.7",
-      "@vaadin/integer-field": "24.3.7",
-      "@vaadin/item": "24.3.7",
-      "@vaadin/list-box": "24.3.7",
-      "@vaadin/login": "24.3.7",
-      "@vaadin/map": "24.3.7",
-      "@vaadin/menu-bar": "24.3.7",
-      "@vaadin/message-input": "24.3.7",
-      "@vaadin/message-list": "24.3.7",
-      "@vaadin/multi-select-combo-box": "24.3.7",
-      "@vaadin/notification": "24.3.7",
-      "@vaadin/number-field": "24.3.7",
-      "@vaadin/password-field": "24.3.7",
-      "@vaadin/polymer-legacy-adapter": "24.3.7",
-      "@vaadin/progress-bar": "24.3.7",
-      "@vaadin/radio-group": "24.3.7",
-      "@vaadin/rich-text-editor": "24.3.7",
-      "@vaadin/scroller": "24.3.7",
-      "@vaadin/select": "24.3.7",
-      "@vaadin/side-nav": "24.3.7",
-      "@vaadin/split-layout": "24.3.7",
-      "@vaadin/tabs": "24.3.7",
-      "@vaadin/tabsheet": "24.3.7",
-      "@vaadin/text-area": "24.3.7",
-      "@vaadin/text-field": "24.3.7",
-      "@vaadin/time-picker": "24.3.7",
-      "@vaadin/tooltip": "24.3.7",
-      "@vaadin/upload": "24.3.7",
-      "@vaadin/vertical-layout": "24.3.7",
-      "@vaadin/virtual-list": "24.3.7",
+      "@vaadin/hilla-file-router": "24.4.0-alpha11",
+      "@vaadin/hilla-frontend": "24.4.0-alpha11",
+      "@vaadin/hilla-lit-form": "24.4.0-alpha11",
+      "@vaadin/hilla-react-auth": "24.4.0-alpha11",
+      "@vaadin/hilla-react-crud": "24.4.0-alpha11",
+      "@vaadin/hilla-react-form": "24.4.0-alpha11",
+      "@vaadin/hilla-react-signals": "24.4.0-alpha11",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha16",
+      "@vaadin/react-components": "24.4.0-alpha16",
+      "@vaadin/router": "1.7.5",
+      "@vaadin/vaadin-development-mode-detector": "2.0.6",
+      "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.1.0",
-      "proj4": "2.9.2",
+      "lit": "3.1.2",
+      "proj4": "2.10.0",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.18.0"
+      "react-router-dom": "6.22.2"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "5.0.4",
-      "@rollup/pluginutils": "5.0.5",
-      "@vitejs/plugin-react": "4.2.0",
-      "@vitejs/plugin-react-swc": "3.5.0",
-      "async": "3.2.4",
-      "glob": "10.3.3",
+      "@babel/preset-react": "^7",
+      "@rollup/plugin-replace": "5.0.5",
+      "@rollup/pluginutils": "5.1.0",
+      "@types/react": "18.2.60",
+      "@types/react-dom": "18.2.19",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha11",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha11",
+      "@vitejs/plugin-react": "4.2.1",
+      "async": "3.2.5",
+      "glob": "10.3.10",
       "rollup-plugin-brotli": "3.1.0",
-      "rollup-plugin-visualizer": "5.9.2",
+      "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.3.3",
-      "vite": "5.0.6",
-      "vite-plugin-checker": "0.6.2",
+      "typescript": "5.4.2",
+      "vite": "5.1.4",
+      "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "560c45f13e0751664de3f77a3de8f32a157d8c387426572434a3ed9cff3cfde5"
+    "hash": "e77570bb7ccb64fbef6d96f7fa3a8c6a5ab8619623b5253678ae839db7ab5956"
   }
 }
