chore: Upgrade to 24.4.0.alpha14

--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.0-alpha15",
+    "@vaadin/bundles": "24.4.0-alpha16",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-frontend": "24.4.0-alpha7",
-    "@vaadin/hilla-lit-form": "24.4.0-alpha7",
-    "@vaadin/hilla-react-auth": "24.4.0-alpha7",
-    "@vaadin/hilla-react-crud": "24.4.0-alpha7",
-    "@vaadin/hilla-react-form": "24.4.0-alpha7",
-    "@vaadin/hilla-react-signals": "24.4.0-alpha7",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha15",
-    "@vaadin/react-components": "24.4.0-alpha15",
+    "@vaadin/hilla-file-router": "24.4.0-alpha14",
+    "@vaadin/hilla-frontend": "24.4.0-alpha14",
+    "@vaadin/hilla-lit-form": "24.4.0-alpha14",
+    "@vaadin/hilla-react-auth": "24.4.0-alpha14",
+    "@vaadin/hilla-react-crud": "24.4.0-alpha14",
+    "@vaadin/hilla-react-form": "24.4.0-alpha14",
+    "@vaadin/hilla-react-i18n": "24.4.0-alpha14",
+    "@vaadin/hilla-react-signals": "24.4.0-alpha14",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha16",
+    "@vaadin/react-components": "24.4.0-alpha16",
     "@vaadin/router": "1.7.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha15",
-    "@vaadin/vaadin-material-styles": "24.4.0-alpha15",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha15",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha16",
+    "@vaadin/vaadin-material-styles": "24.4.0-alpha16",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha16",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -26,24 +28,23 @@
     "proj4": "2.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.22.1"
+    "react-router-dom": "6.22.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
-    "@types/react": "18.2.57",
-    "@types/react-dom": "18.2.19",
-    "@vaadin/hilla-file-router": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-cli": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-core": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha7",
-    "@vaadin/hilla-generator-utils": "24.4.0-alpha7",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha14",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha14",
     "@vitejs/plugin-react": "4.2.1",
     "async": "3.2.5",
     "glob": "10.3.10",
@@ -51,8 +52,8 @@
     "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.3.3",
-    "vite": "5.1.4",
+    "typescript": "5.4.2",
+    "vite": "5.1.6",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -61,21 +62,23 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.0-alpha15",
+      "@vaadin/bundles": "24.4.0-alpha16",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-frontend": "24.4.0-alpha7",
-      "@vaadin/hilla-lit-form": "24.4.0-alpha7",
-      "@vaadin/hilla-react-auth": "24.4.0-alpha7",
-      "@vaadin/hilla-react-crud": "24.4.0-alpha7",
-      "@vaadin/hilla-react-form": "24.4.0-alpha7",
-      "@vaadin/hilla-react-signals": "24.4.0-alpha7",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha15",
-      "@vaadin/react-components": "24.4.0-alpha15",
+      "@vaadin/hilla-file-router": "24.4.0-alpha14",
+      "@vaadin/hilla-frontend": "24.4.0-alpha14",
+      "@vaadin/hilla-lit-form": "24.4.0-alpha14",
+      "@vaadin/hilla-react-auth": "24.4.0-alpha14",
+      "@vaadin/hilla-react-crud": "24.4.0-alpha14",
+      "@vaadin/hilla-react-form": "24.4.0-alpha14",
+      "@vaadin/hilla-react-i18n": "24.4.0-alpha14",
+      "@vaadin/hilla-react-signals": "24.4.0-alpha14",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha16",
+      "@vaadin/react-components": "24.4.0-alpha16",
       "@vaadin/router": "1.7.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha15",
-      "@vaadin/vaadin-material-styles": "24.4.0-alpha15",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha15",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha16",
+      "@vaadin/vaadin-material-styles": "24.4.0-alpha16",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha16",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
@@ -83,24 +86,23 @@
       "proj4": "2.10.0",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.22.1"
+      "react-router-dom": "6.22.3"
     },
     "devDependencies": {
       "@babel/preset-react": "^7",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
-      "@types/react": "18.2.57",
-      "@types/react-dom": "18.2.19",
-      "@vaadin/hilla-file-router": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-cli": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-core": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha7",
-      "@vaadin/hilla-generator-utils": "24.4.0-alpha7",
+      "@types/react": "18.2.64",
+      "@types/react-dom": "18.2.21",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha14",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha14",
       "@vitejs/plugin-react": "4.2.1",
       "async": "3.2.5",
       "glob": "10.3.10",
@@ -108,14 +110,14 @@
       "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.3.3",
-      "vite": "5.1.4",
+      "typescript": "5.4.2",
+      "vite": "5.1.6",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "46ab06519cc2f4e9fd79ba122378dff93f21782807217683a978f14befdb3f05"
+    "hash": "e339b863efa58a47826b904a14468fceef9ef4b102deccb55d0fb36f13a444b2"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -141,6 +143,8 @@
     "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@vaadin/hilla-file-router": "$@vaadin/hilla-file-router",
+    "@vaadin/hilla-react-i18n": "$@vaadin/hilla-react-i18n"
   }
 }
