update with the latest changes in Hilla

--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.0-alpha17",
+    "@vaadin/bundles": "24.4.0-alpha19",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "24.4.0-alpha15",
-    "@vaadin/hilla-frontend": "24.4.0-alpha15",
-    "@vaadin/hilla-lit-form": "24.4.0-alpha15",
-    "@vaadin/hilla-react-auth": "24.4.0-alpha15",
-    "@vaadin/hilla-react-crud": "24.4.0-alpha15",
-    "@vaadin/hilla-react-form": "24.4.0-alpha15",
-    "@vaadin/hilla-react-i18n": "24.4.0-alpha15",
-    "@vaadin/hilla-react-signals": "24.4.0-alpha15",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha17",
-    "@vaadin/react-components": "24.4.0-alpha17",
+    "@vaadin/hilla-file-router": "file:../hilla/vaadin-hilla-file-router-24.4.0-alpha19.tgz",
+    "@vaadin/hilla-frontend": "24.4.0-alpha19",
+    "@vaadin/hilla-lit-form": "24.4.0-alpha19",
+    "@vaadin/hilla-react-auth": "24.4.0-alpha19",
+    "@vaadin/hilla-react-crud": "24.4.0-alpha19",
+    "@vaadin/hilla-react-form": "24.4.0-alpha19",
+    "@vaadin/hilla-react-i18n": "24.4.0-alpha19",
+    "@vaadin/hilla-react-signals": "24.4.0-alpha19",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha19",
+    "@vaadin/react-components": "24.4.0-alpha19",
     "@vaadin/router": "1.7.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha17",
-    "@vaadin/vaadin-material-styles": "24.4.0-alpha17",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha17",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha19",
+    "@vaadin/vaadin-material-styles": "24.4.0-alpha19",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha19",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -31,29 +31,29 @@
     "react-router-dom": "6.22.3"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7",
+    "@babel/preset-react": "7.24.1",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
-    "@types/react": "18.2.64",
-    "@types/react-dom": "18.2.21",
-    "@vaadin/hilla-generator-cli": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-core": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha15",
-    "@vaadin/hilla-generator-utils": "24.4.0-alpha15",
+    "@types/react": "18.2.73",
+    "@types/react-dom": "18.2.23",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha19",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha19",
     "@vitejs/plugin-react": "4.2.1",
     "async": "3.2.5",
-    "glob": "10.3.10",
+    "glob": "10.3.12",
     "rollup-plugin-brotli": "3.1.0",
     "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.4.2",
-    "vite": "5.1.6",
+    "typescript": "5.4.3",
+    "vite": "5.2.7",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -62,23 +62,23 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.0-alpha17",
+      "@vaadin/bundles": "24.4.0-alpha19",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-file-router": "24.4.0-alpha15",
-      "@vaadin/hilla-frontend": "24.4.0-alpha15",
-      "@vaadin/hilla-lit-form": "24.4.0-alpha15",
-      "@vaadin/hilla-react-auth": "24.4.0-alpha15",
-      "@vaadin/hilla-react-crud": "24.4.0-alpha15",
-      "@vaadin/hilla-react-form": "24.4.0-alpha15",
-      "@vaadin/hilla-react-i18n": "24.4.0-alpha15",
-      "@vaadin/hilla-react-signals": "24.4.0-alpha15",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha17",
-      "@vaadin/react-components": "24.4.0-alpha17",
+      "@vaadin/hilla-file-router": "24.4.0-alpha19",
+      "@vaadin/hilla-frontend": "24.4.0-alpha19",
+      "@vaadin/hilla-lit-form": "24.4.0-alpha19",
+      "@vaadin/hilla-react-auth": "24.4.0-alpha19",
+      "@vaadin/hilla-react-crud": "24.4.0-alpha19",
+      "@vaadin/hilla-react-form": "24.4.0-alpha19",
+      "@vaadin/hilla-react-i18n": "24.4.0-alpha19",
+      "@vaadin/hilla-react-signals": "24.4.0-alpha19",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha19",
+      "@vaadin/react-components": "24.4.0-alpha19",
       "@vaadin/router": "1.7.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha17",
-      "@vaadin/vaadin-material-styles": "24.4.0-alpha17",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha17",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha19",
+      "@vaadin/vaadin-material-styles": "24.4.0-alpha19",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha19",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
@@ -89,35 +89,35 @@
       "react-router-dom": "6.22.3"
     },
     "devDependencies": {
-      "@babel/preset-react": "^7",
+      "@babel/preset-react": "7.24.1",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
-      "@types/react": "18.2.64",
-      "@types/react-dom": "18.2.21",
-      "@vaadin/hilla-generator-cli": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-core": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha15",
-      "@vaadin/hilla-generator-utils": "24.4.0-alpha15",
+      "@types/react": "18.2.73",
+      "@types/react-dom": "18.2.23",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha19",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha19",
       "@vitejs/plugin-react": "4.2.1",
       "async": "3.2.5",
-      "glob": "10.3.10",
+      "glob": "10.3.12",
       "rollup-plugin-brotli": "3.1.0",
       "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.4.2",
-      "vite": "5.1.6",
+      "typescript": "5.4.3",
+      "vite": "5.2.7",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "14b0af69cef053b610020cef2a642f6cf5c00c7f758fbfadeea64a7c93c65d5b"
+    "hash": "92bad37fd9b2a437dee9a38acb7ae838e282c85111926d4817dea03236012e4d"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
