--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@polymer/polymer": "3.5.1",
     "@vaadin/bundles": "24.4.0-alpha19",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "file:../hilla/vaadin-hilla-file-router-24.4.0-alpha19.tgz",
+    "@vaadin/hilla-file-router": "24.4.0-alpha21",
     "@vaadin/hilla-frontend": "24.4.0-alpha21",
     "@vaadin/hilla-lit-form": "24.4.0-alpha21",
     "@vaadin/hilla-react-auth": "24.4.0-alpha21",
@@ -117,7 +117,7 @@
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "3290119b395410e16b254ccb50edd6d36271686cfb643f6c41be64c6dd0e6660"
+    "hash": "77239bbc54a45d83b2a88bb2844736fd850436620e92081675affe96f66fef7c"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -132,8 +132,10 @@
     "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
     "react": "$react",
     "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
+    "@vaadin/hilla-file-router": "$@vaadin/hilla-file-router",
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "react-router-dom": "$react-router-dom",
+    "@vaadin/hilla-react-i18n": "$@vaadin/hilla-react-i18n",
     "lit": "$lit",
     "@polymer/polymer": "$@polymer/polymer",
     "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
@@ -143,8 +145,6 @@
     "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
-    "@vaadin/hilla-file-router": "$@vaadin/hilla-file-router",
-    "@vaadin/hilla-react-i18n": "$@vaadin/hilla-react-i18n"
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
   }
 }
