--- a/package.json
+++ b/package.json
@@ -4,28 +4,25 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.0-alpha22",
+    "@vaadin/bundles": "24.4.0-alpha23",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "24.4.0-alpha23",
-    "@vaadin/hilla-frontend": "24.4.0-alpha23",
-    "@vaadin/hilla-lit-form": "24.4.0-alpha23",
-    "@vaadin/hilla-react-auth": "24.4.0-alpha23",
-    "@vaadin/hilla-react-crud": "24.4.0-alpha23",
-    "@vaadin/hilla-react-form": "24.4.0-alpha23",
-    "@vaadin/hilla-react-i18n": "24.4.0-alpha23",
-    "@vaadin/hilla-react-signals": "24.4.0-alpha23",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha22",
-    "@vaadin/react-components": "24.4.0-alpha22",
+    "@vaadin/hilla-file-router": "24.4.0-alpha25",
+    "@vaadin/hilla-frontend": "24.4.0-alpha25",
+    "@vaadin/hilla-lit-form": "24.4.0-alpha25",
+    "@vaadin/hilla-react-auth": "24.4.0-alpha25",
+    "@vaadin/hilla-react-crud": "24.4.0-alpha25",
+    "@vaadin/hilla-react-form": "24.4.0-alpha25",
+    "@vaadin/hilla-react-i18n": "24.4.0-alpha25",
+    "@vaadin/hilla-react-signals": "24.4.0-alpha25",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha23",
+    "@vaadin/react-components": "24.4.0-alpha23",
     "@vaadin/router": "1.7.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha22",
-    "@vaadin/vaadin-material-styles": "24.4.0-alpha22",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha22",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.1.2",
-    "proj4": "2.10.0",
+    "lit": "3.1.3",
+    "proj4": "2.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.3"
@@ -34,17 +31,17 @@
     "@babel/preset-react": "7.24.1",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
-    "@types/react": "18.2.75",
-    "@types/react-dom": "18.2.24",
-    "@vaadin/hilla-generator-cli": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-core": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha23",
-    "@vaadin/hilla-generator-utils": "24.4.0-alpha23",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha25",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha25",
     "@vitejs/plugin-react": "4.2.1",
     "async": "3.2.5",
     "glob": "10.3.12",
@@ -53,7 +50,7 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.4.5",
-    "vite": "5.2.8",
+    "vite": "5.2.9",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -62,28 +59,25 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.0-alpha22",
+      "@vaadin/bundles": "24.4.0-alpha23",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-file-router": "24.4.0-alpha23",
-      "@vaadin/hilla-frontend": "24.4.0-alpha23",
-      "@vaadin/hilla-lit-form": "24.4.0-alpha23",
-      "@vaadin/hilla-react-auth": "24.4.0-alpha23",
-      "@vaadin/hilla-react-crud": "24.4.0-alpha23",
-      "@vaadin/hilla-react-form": "24.4.0-alpha23",
-      "@vaadin/hilla-react-i18n": "24.4.0-alpha23",
-      "@vaadin/hilla-react-signals": "24.4.0-alpha23",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha22",
-      "@vaadin/react-components": "24.4.0-alpha22",
+      "@vaadin/hilla-file-router": "24.4.0-alpha25",
+      "@vaadin/hilla-frontend": "24.4.0-alpha25",
+      "@vaadin/hilla-lit-form": "24.4.0-alpha25",
+      "@vaadin/hilla-react-auth": "24.4.0-alpha25",
+      "@vaadin/hilla-react-crud": "24.4.0-alpha25",
+      "@vaadin/hilla-react-form": "24.4.0-alpha25",
+      "@vaadin/hilla-react-i18n": "24.4.0-alpha25",
+      "@vaadin/hilla-react-signals": "24.4.0-alpha25",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha23",
+      "@vaadin/react-components": "24.4.0-alpha23",
       "@vaadin/router": "1.7.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha22",
-      "@vaadin/vaadin-material-styles": "24.4.0-alpha22",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha22",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.1.2",
-      "proj4": "2.10.0",
+      "lit": "3.1.3",
+      "proj4": "2.11.0",
       "react": "18.2.0",
       "react-dom": "18.2.0",
       "react-router-dom": "6.22.3"
@@ -92,17 +86,17 @@
       "@babel/preset-react": "7.24.1",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
-      "@types/react": "18.2.75",
-      "@types/react-dom": "18.2.24",
-      "@vaadin/hilla-generator-cli": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-core": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha23",
-      "@vaadin/hilla-generator-utils": "24.4.0-alpha23",
+      "@types/react": "18.2.79",
+      "@types/react-dom": "18.2.25",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha25",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha25",
       "@vitejs/plugin-react": "4.2.1",
       "async": "3.2.5",
       "glob": "10.3.12",
@@ -111,13 +105,13 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.4.5",
-      "vite": "5.2.8",
+      "vite": "5.2.9",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "c8026922f2fe39cf887cb6a7ed916c2d4a9141be9f89da97963ffb95dfca200e"
+    "hash": "92b58d8f4fa0cb6b10bab8431cedc5bce6883d5ae68748d5dde70e5d38022b24"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -142,9 +136,6 @@
     "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
     "@vaadin/hilla-react-signals": "$@vaadin/hilla-react-signals",
     "date-fns": "$date-fns",
-    "proj4": "$proj4",
-    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
-    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
+    "proj4": "$proj4"
   }
 }
